# fast-ledger

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: close-feature-to-main-prs.yml
authors/NicEzWs/: README.md
authors/NicEzWs/colab/: final_processe_image.ipynb  yolo11_seg_invoice_train.ipynb
authors/NicEzWs/image_pipeline/: main.py
src/: __init__.py  invoiceImageProcess.py  main.py  testpostings.py
src/app/: demo.py
src/app/Catcountants/: main.kv  main.py  run_device.py  run_sim.py
src/app/Catcountants/devices/: samsung_a32.py
src/app/Catcountants/sim_device/: samsung_a32.py
src/app/Catcountants/ui/screen/: home.kv  (+6 more)
src/app/Catcountants/utilities/: loadkv.py
src/app/Catcountants_DEMO/: main.py  ui.kv
src/app/Catcountants_DEMO/nlp_processor/: main_nlp_logic.py
src/app/Catcountants_DEMO/ocr_processor/: main_ocr_logic.py
src/app/Tech Demo/: demo.kv  demo.py
src/core/: __init__.py  core.py
src/core/company_id/: __init__.py  company.py  test_Company.py
src/core/image_pipeline/: README.md  __init__.py  invoiceImageProcess.py  p_result.py
src/core/ledger/: expression.txt  extract.py  ledger_convert.py  ledger_journal.py  ledgers2.txt  main.py  models.py  parser.py  parser_explanation.md  report.py  requirements.txt  setup.py  test1.ledger
src/core/qrcode_scanner/: __init__.py  q_result.py  receipt_module.py  scan_qrcode.py
src/core/recommender/: classifier.py  embedder.py  evaluation.py  predictor.py  recommender.py  testpostings.py  transformer.py
src/core/scanner/: scanner.py
src/poetry_runner/: runner.py
src/test/: testPoetry.py
src/ui/: main.py
src/ui/kv/: camera_screen.kv  home_screen.kv  journal_screen.kv  transaction_screen.kv
src/ui/screens/: __init__.py  camera_screen.py  home_screen.py  journal_screen.py  screen2_newitems.py  transaction_screen.py
(+26 files in other folders)
